Settings: Fix some text overflows (#3369)

--- a/src/components/left/settings/Settings.scss
+++ b/src/components/left/settings/Settings.scss
@@ -138,6 +138,7 @@
   &.no-border {
     margin-bottom: 0;
     box-shadow: none;
+    border-bottom: none;
   }
 
   &-header {
@@ -266,6 +267,10 @@
         width: 3rem;
         height: 3rem;
         margin-right: 1rem;
+      }
+
+      .contact-info {
+        overflow: hidden;
       }
 
       .contact-name {
